
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 JAN 16b
   * in cycle/resconv/_MUSCL2/doc/report.tex
     - made changes


2019 JAN 16a
   * make config
     - updated file config/removeproprietary.sh


2019 JAN 15a
   * in cycle/resconv/
     - added _MUSCL2
   * in lib/latex/warpdoc.cls
     - got rid of mtpro2
   * in lib/latex
     - added eg


2019 JAN 10a
   * in cycle/restime/_CDF+/restime.c
     - in write_disc_restime_template(), changed xi1,xi2,xi3 to xi[1..nf] and set all xi to 0.5
       except for the tke and psi fluxes where xi is set to 0.25 
     - in read_disc_restime_actions(), changed xi1,xi2,xi3 to xi[1..nf]
     - in _psi(), xi is now set to gl->cycle.restime.xi[flux]
   * in cycle/restime/_CDF+/restime.hh
     - changed xi1,xi2,xi3 to xi[nf] within gl_cycle_restime_t


2019 JAN 07a
   * in LICENSE
     - updated year of copyright
   * in README
     - updated year of copyright
   * in src/control.c
     - updated year of copyright
   * in bin
     - added flat_plate_turbulent_unsteady.wrp
   * in cycle/share/cycle_share.h
     - added PRECON_LOCALEIGENVALUE2 (new preconditioner that works better for 2-equation turbulence
       models and nitrogen vibrational energy in non-equilibrium)
   * in cycle/share/cycle_share.c
     - in add_constants_to_codex(), added PRECON_LOCALEIGENVALUE2
   * in cycle/*/cycle.c
     - in runtime_actions_cycle_specific(), added PRECON_LOCALEIGENVALUE2
   * in model/share/fluid_share.c
     - in find_Gamma(), added PRECON_LOCALEIGENVALUE2


2018 DEC 22a
   * in src/control.c
     - renamed _Omega_DISTMPI_compatible to _Omega_DISTMPI_global
     - renamed _x_DISTMPI_compatible to _x_DISTMPI_global
     - added _x_DISTMPI_local()
     - in read_control_functions(), added calls to _x_DISTMPI_local