@@ -4,6 +4,8 @@
 #include <src/common.h>
 #include <model/_model.h>
 
+void find_Fstar_interfaces(np_t *np, gl_t *gl, long theta, long ls, long le);
+
 void add_dFstar_residual(long theta, long ls, long le, np_t *np, gl_t *gl, double fact, double fact_trapezoidal);
 
 void find_Delta_Lambda_for_dtau(np_t *np, gl_t *gl, long l, long theta, flux_t Delta_Lambda);
