@@ -1,1 +1,1 @@
-#define VERSION "19jan16b"
+#define VERSION "19jan17a"
